# bird-protocol

./: .gitignore  Cargo.toml  README.md
bird_protocol/: Cargo.toml
bird_protocol/src/: lib.rs  packet.rs  packet_bytes.rs  packet_default.rs  packet_euclid.rs  packet_fastnbt.rs  packet_nbt.rs  packet_node.rs  packet_primitive.rs  packet_types.rs  tests.rs  types.rs
bird_protocol/src/version/: mod.rs  v1_19.rs
bird_protocol_derive/: Cargo.toml
bird_protocol_derive/src/: attribute.rs  c_enum.rs  lib.rs  packet.rs  read.rs  readable.rs  util.rs  writable.rs  write.rs
bird_protocol_server/: Cargo.toml  README.md
bird_protocol_server/src/: connection.rs  handler.rs  read.rs  server.rs  write.rs
cp_derive/: Cargo.toml
cp_derive/src/: attribute.rs
cubic_protocol/: Cargo.toml
cubic_protocol/src/: lib.rs  packet_bytes.rs  packet_default.rs  packet_enum.rs  packet_primitive.rs  tests.rs
cubic_protocol_derive/: Cargo.toml
cubic_protocol_derive/src/: attribute.rs  c_enum.rs  lib.rs  packet.rs  readable.rs  writable.rs
cubic_protocol_server/: Cargo.toml  README.md
cubic_protocol_server/src/: connection.rs  handler.rs  lib.rs  read.rs  server.rs  write.rs
macros/: Cargo.toml
macros/src/: attr.rs  attribute.rs  fields.rs  lib.rs  packet.rs  readable.rs  util.rs  writable.rs
p1_18_2/: Cargo.toml
p1_18_2/src/: lib.rs
server/: Cargo.toml
server/src/: input_queue.rs  server.rs
src/: bytes.rs  lib.rs  packet.rs  packet_default.rs  packet_node.rs  packet_primitive.rs  protocol.rs  status.rs  tokio.rs  types.rs  version.rs  version_macro.rs
src/p1_18_2/: mod.rs
src/server/: input_queue.rs  mod.rs  server.rs
