[package]
name = "cubic-protocol"
version = "0.1.5"
edition = "2021"
description = "Minecraft protocol on rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.1.0", optional = true }
tokio = { version = "1.18.2", features = ["full"], optional = true }
log = { version = "0.4.17", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
euclid = "0.22.7"
cubic-chat = "0.1.0"
serde_json = "1.0.81"
async-trait = "0.1.53"
fastnbt = "2.1.0"
quick-error = "2.0.1"
uuid = { version = "1.0.0", features = ["serde"] }
macros = { path = "macros" }

[features]
tokio-bytes = ["dep:bytes"]
p1_18_2 = []
server = ["dep:tokio", "tokio-bytes", "dep:log"]

[dev-dependencies]
actix-rt = "2.7.0"
simple_logger = "2.1.0"
