[package]
name = "bird-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
anyhow = "1.0.58"
serde = "1.0.139"
serde_json = "1.0.82"
bird-chat = "0.1.2"
either = { version = "1.7.0", features = ["serde"], optional = true }
uuid = { version = "1.1.2", features = ["serde"] }
fastnbt = { version = "2.2.0", optional = true }
euclid = { version = "0.22.7", optional = true }
bytes = { version = "1.2.0", optional = true }
bird-protocol-derive = { version = "0.1.3", optional = true, path = "../bird_protocol_derive" }

[features]
packet_default = ["derive", "dep:either"]
derive = ["dep:bird-protocol-derive"]
euclid = ["dep:euclid"]
tokio-bytes = ["dep:bytes"]
fastnbt = ["dep:fastnbt"]