[package]
name = "bird-protocol-derive"
version = "0.1.1"
edition = "2021"
description = "Packet, PacketReadable, PacketWritable derives for CubicProtocol"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
syn = { version = "1.0.96", features = ["full"] }
quote = "1.0.18"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.1.3"
async-trait = "0.1.56"
