[package]
name = "cubic-protocol-server"
version = "0.1.6"
edition = "2021"
description = "ProtocolServer for CubicProtocol"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubic-protocol = "0.1.6"
async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["full"]}
