[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubic-protocol = { path = "../", features = ["tokio-bytes"] }
tokio = { version = "1.18.2", features = ["full"]}
async-trait = "0.1.53"
log = "0.4.17"

[dev-dependencies]
p1_18_2 = { path = "../p1_18_2" }
simple_logger = "2.1.0"
actix-rt = "2.7.0"